<resources>
    <string name="app_name">PDefender</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_add">Add</string>
    <string name="menu_top">Top</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_show">Show</string>

    <string name="add_title">サイト名称</string>
    <string name="add_url">URL</string>
    <string name="add_id">ID/Email</string>
    <string name="add_password">パスワード</string>
    <string name="add_memo">メモ</string>
    <string name="bt_add">登録</string>
    <string name="bt_cancel">キャンセル</string>
    <string name="copy_ok">クリップボードにコピーしました。</string>
    <string name="biometric_subtitle">生体認証</string>
    <string name="biometric_description">指紋認証をします。</string>
</resources>
